# murphy-confidence

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  EXTRACTION_GUIDE.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  publish.yml
docs/: ARCHITECTURE.md
examples/: basic_scoring.py  fastapi_middleware.py  gate_compiler.py  langchain_callback.py  safety_gates.py
murphy_confidence/: __init__.py  compiler.py  engine.py  gates.py  types.py
murphy_confidence/domain/: __init__.py  cross_system.py  financial.py  healthcare.py  manufacturing.py
tests/: __init__.py  test_engine.py  test_gates.py
